Subject: changes made by holy
Description:

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,4 +12,11 @@
     <string name="_c">"              C"</string>
     
 
+    <string name="somestring">
+      <div>
+		CONTENTS HERE
+        </div>
+   </string>
+    
+    
 </resources>
