Subject: apk with welcome page and automatic downloading *apl.img*
Description:

1) initial help(with check-box)
2) reboot after complete install
3) help context added in main page
4) added folder 'assets' with two files:
	- aakash.sh
	- preinstall.sh
5) this commit will download 'apl.img'(700MB) from http://10.102.152.27/tar/apl.img
6) feature for extracting is yet to be implemented.
7) still need to push 'preinstall.sh' manually.
8) use commit hash 'aeb6e2e22f' or tag 0.9 for stable release.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,12 +11,23 @@
     <string name="app_name8">About</string>
     <string name="_c">"              C"</string>
     
-
-    <string name="somestring">
+    <string name="help_para1">
       <div>
-		CONTENTS HERE
+		<b><u>Welcome to Aakash Programmming Lab(apl)</u></b> \n\n
+		Aakash Programming Lab has <b>C</b>, <b>C++</b>, <b>Python</b> and <b>Scilab</b> as programming languages. \n
         </div>
    </string>
-    
-    
+   
+    <string name="help_para2">
+      <div>
+		Within each programming console, a detailed documentation along with reference manual, has been
+		provided. To read the documentation, click on <b>Option button</b>.
+        </div>
+   </string>
+   
+	<string name="help_para3">
+      <div>
+		This will pop an option Menu-Bar. Click <b>Help</b> for detailed help.
+        </div>
+   </string>
 </resources>
