Subject: download URL http://aakaashlabs.org/builds/apl.tar.gz
Description:

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -36,9 +36,9 @@
 	    Please check help for more details. 
 	    Design and developed at IIT Bombay. 
         \n
-        \nVersion: <b>1.0</b> (beta)
+        \nVersion: <b>1.1</b>
         \n
-        \nRepository: <b>https://github.com/androportal/apk</b> 
+        \nRepository: <b>https://github.com/androportal/APL-apk</b> 
         \n
         \nLicense:
 		GNU GPL, version-3, 29 June 2007
